--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "crypto": "^1.0.1",
     "ethereumjs-tx": "^2.1.2",
     "solc": "^0.5.0",
-    "web3": "^4.0.1"
+    "web3": "^1.0.0-beta.50"
   }
 }
