--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/brayanesteves/web3-structure-base#readme",
   "dependencies": {
+    "@openzeppelin/upgrades": "^2.8.0",
     "crypto": "^1.0.1",
     "ethereumjs-tx": "^2.1.2",
     "solc": "^0.5.0",
