--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/brayanesteves/web3-structure-base#readme",
   "dependencies": {
     "@openzeppelin/upgrades": "^2.8.0",
+    "@uniswap/sdk": "^3.0.3",
     "crypto": "^1.0.1",
     "ethereumjs-tx": "^2.1.2",
+    "ethers": "^6.13.2",
     "solc": "^0.5.0",
     "web3": "^1.0.0-beta.50"
   }
